# GANSU

./: .gitignore  CMakeLists.txt  LICENSE  MPI_DESIGN.md  Makefile  Parameter.md  README.md  deploy.sh  gb1.json  gb2.json  pyproject.toml  setup.py  vlog.txt
.github/workflows/: release.yml
auxiliary_basis/: cc-pvdz-pp-rifit-cisplatin.gbs  cc-pvdz-pp-rifit.gbs  cc-pvtz-pp-rifit-cisplatin.gbs  cc-pvtz-pp-rifit.gbs  def2-svp-rifit.gbs
basis/: ano-rcc-mb.gbs  aug-cc-pvdz.gbs  aug-cc-pvqz.gbs  aug-cc-pvtz.gbs  cc-pvdz-pp-cisplatin.gbs  cc-pvdz-pp.gbs  cc-pvtz-pp-cisplatin.gbs  cc-pvtz-pp.gbs  def2-svp.gbs  def2-svp.sad  def2-tzvp.gbs  def2-tzvp.sad  lanl2dz.gbs  lanl2dz.sad
bench/: README.md  bench.py  compare_steom_roots.py  make_local_series.py  make_orca_inputs.py  parse_gansu.py  parse_orca.py  run_gansu.sh  run_orca.sh  run_orca_one.sh  series.tsv  series_aldehyde.tsv  series_alkylbenzene.tsv  series_amide.tsv  series_ketone.tsv  series_nitrile.tsv
bench/steom_validation/: README.md  ch2o_ccpvdz_steom.inp  ch2o_sto3g_steom.inp  ch2o_sto3g_steom_triplet.inp  ch2o_sto3g_steom_triplet_dbg.inp  h2o_sto3g_steom.inp  h2o_sto3g_steom_fc1.inp  nooijen1997.txt
doc/: Parameter.md  dmet_steom_auto_fragment.md  main.md  parameters.md  usage_c_api.md  usage_cli.md  usage_python.md
fci_mpi/: README.md  bind_for_multi_nodes.sh  common.py  env.sh  fci.py  fci_from_dumpfile.py  reqirements.txt  run_gpufci.sh  run_gpufci_from_fcidump.sh  run_gpufci_from_integral.sh
fci_mpi/geometry/: BH4K.mol  BN.mol  BeH2.mol  BeO.mol  C2H2.xyz  C2H4.mol  C2H5Br.mol  C2H6O2.mol  C2N2.mol  C2_25.mol  C3H4.mol  C3H6.mol  C3H8.mol  CH2.mol  CH2Cl2.mol  CH4.mol  CHF3.mol  CNH5.mol  CO2.mol  CSH4.mol  CaH2.mol  ClF3.mol  H2.mol  H2O.mol  HF.mol  KF.mol  KOH.mol  LiBH4.mol  MgO.mol  N2CH4O.mol  NF3.mol  NH3.mol  Ne2.mol  P4.mol  SF6.mol  SOF2.mol  SiC.mol  SiF4.mol  SiH3Cl.mol  SiO.mol
fci_mpi/lib/: build.sh  fci.cu  fci_contract.c  fci_save.cu
fci_mpi/share/: B2.mol  B2H6.mol  BCl3.mol  BF3.mol  BH3.mol  C2.mol  C2F6.mol  C2H2.mol  C2H6.mol  (+56 more)
include/: Et_functions.hpp  Et_functions_init.inc  Et_grad_functions.hpp  Et_grad_functions_init.inc  adc2_full_operator.hpp  adc2_operator.hpp  adc2x_operator.hpp  ao2mo.cuh  basis_set.hpp  boys.hpp  bt_pno_backtransform.hpp  builder.hpp  cc2_solver.hpp  ccsd_lambda.hpp  cis_nto_active_space.hpp  cis_operator.hpp  cis_operator_jk.hpp  cis_operator_ri.hpp  compile_flag.hpp  compile_flag_int1e.hpp  console.hpp  cphf_solver.hpp  cpu_integrals.hpp  cpu_kernel_launch.hpp  cuda_compat.hpp  davidson_solver.hpp  device_host_memory.hpp  diis.hpp  dlpno_ccsd.hpp  dlpno_density.hpp  dlpno_domain.hpp  dlpno_ea_eom_native_operator.hpp  dlpno_ea_eom_projected_operator.hpp  dlpno_ea_eom_transform.hpp  dlpno_ea_packing.hpp  dlpno_eom_dressed_pno.hpp  dlpno_eri_gpu.hpp  dlpno_ip_eom_native_operator.hpp  dlpno_ip_eom_operator.hpp  dlpno_ip_eom_projected_operator.hpp  (+95 more)
packaging/: Dockerfile.wheel  build_wheel_docker.sh
script/: acene_dense_steom_h200.sh  acene_orca_h200.sh  acene_orca_tight_h200.sh  acene_series_h200.sh  analyze_adc2_schur_terms.py  bench_dlpno.py  bench_dlpno_step6.py  benchmark_ccsd_pyscf.py  benchmark_excited_states.sh  benchmark_excited_states_plot.py  benchmark_excited_states_pyscf.py  benchmark_geomopt_pyscf.py  benchmark_half_transform_adc2.sh  benchmark_half_transform_cis.sh  benchmark_half_transform_mp3.sh  benchmark_hash_mp2.sh  benchmark_hash_mp2_full.sh  benchmark_pyscf_cis_adc2.py  benchmark_ri_mp2.sh  build_adc2_from_pyscf.py  build_wheel.sh  check_coulomb_only.py  check_dbar.py  check_energy_api.py  check_exchange_2c.py  check_exchange_3c.py  check_property_api.py  check_uhf_energy_api.py  compare_adc2_pyscf.py  compare_intermediates.py  compare_intermediates_v2.py  convert_gbs_to_nwchem.py  correct_ee_adc2_reference.py  cpu_posthf_sweep.sh  debug_adc2_blocks.py  debug_adc2_m11.py  debug_adc2_v2.py  debug_adc2_v3.py  debug_adc2_v4.py  debug_adc2_v5.py  (+193 more)
src/: GeometryOptimization.cu  HF_main.cu  MD_kernel.txt  OS_kernel.txt  RI_RMP2.txt  adc2_full_operator.cu  adc2_operator.cu  adc2x_operator.cu  basis_set.cpp  bt_pno_backtransform.cu  cc2_solver.cu  ccsd_lambda.cu  ccsd_lambda_gpu.cu  cis_nto_active_space.cu  cis_operator.cu  cis_operator_jk.cu  cis_operator_ri.cu  cphf_solver.cu  davidson_solver.cu  demo.cu  dlpno_ccsd.cu  dlpno_domain.cu  dlpno_ea_eom_native_operator.cu  dlpno_ea_eom_projected_operator.cu  dlpno_ea_eom_transform.cu  dlpno_ea_packing.cu  dlpno_eom_dressed_pno.cu  dlpno_eri_gpu.cu  dlpno_ip_eom_native_operator.cu  dlpno_ip_eom_operator.cu  dlpno_ip_eom_projected_operator.cu  dlpno_ip_eom_transform.cu  dlpno_ip_packing.cu  dlpno_localizer.cu  dlpno_mp2.cu  dlpno_mp2_lambda.cu  dlpno_pair_data.cu  dlpno_pao.cu  dlpno_phase24_extract.cu  dlpno_picache_gpu.cu  (+84 more)
test/: CMakeLists.txt  test_bt_pno_backtransform.cu  test_cis_nto_active_space.cu  test_cpu_backend.cu  test_davidson_solver.cu  test_dlpno_ccsd.cu  test_dlpno_ea_packing.cu  test_dlpno_ip_packing.cu  test_dlpno_localizer.cu  test_dlpno_mp2.cu  test_dlpno_pao.cu  test_dlpno_tno.cu  test_ea_eom_ccsd.cu  test_gpu_kernels.cu  test_gpu_manager.cu  test_ip_eom_ccsd.cu  test_rys_quadrature.cu  test_steom_ccsd.cu  test_thc_collocation.cu  test_thc_decomposition.cu  test_thc_grid.cu  test_thc_mp2.cu  test_util.hpp  test_validation.cu
ui/: Makefile  benchmark_excited.py  benchmark_excited_pyscf.py  build.bat  run.sh  test_eom_mp2_solvers.py  test_error_recovery.py  test_excited_states.py  test_frozen_core.py
xyz/: 2-butanone.xyz  2-hexadecanone.xyz  2-octanone.xyz  2-octanone_opt.xyz  ABAQ.xyz  Alanine.xyz  C2.xyz  CH3.xyz  CaO.xyz  Glutamic_acid.xyz  H2O_asym.xyz  H2O_dimer.xyz  H2O_distorted.xyz  H2O_hexamer_book.xyz  H2O_hexamer_book_opt.xyz  H2O_hexamer_cage.xyz  H2O_hexamer_cage_opt.xyz  H2O_hexamer_prism.xyz  H2O_hexamer_prism_opt.xyz  H2O_trimer_cyclic.xyz  HI.xyz  HydrogenCyanide.xyz  Indigo.xyz  IrCl3.xyz  Ir_atom.xyz  Ir_ppy3.xyz  NaCl.xyz  OH.xyz  Pentacene.xyz  Tetracene.xyz  cisplatin.xyz  m-DAz-TXO2.xyz  m-DDPA-TXO2.xyz  p-DAz-TXO2.xyz  p-DDMAc-TXO2.xyz  p-DDPA-TXO2.xyz
(+426 files in other folders)
