[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gansu"
version = "0.1.0"
description = "GPU Accelerated Numerical Simulation Utility for quantum chemistry"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.8"
authors = [
    {name = "Hiroshima University / Fujitsu Limited"},
]
keywords = ["quantum-chemistry", "gpu", "hartree-fock", "ccsd", "cuda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy",
]

[project.scripts]
gansu = "gansu.cli:main"

[project.urls]
Homepage = "https://github.com/Yasuaki-Ito/GANSU"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
gansu = [
    "data/basis/*.gbs",
    "data/basis/*.sad",
    "data/auxiliary_basis/*.gbs",
    "lib/libgansu.so",
    "lib/libgansu.dylib",
]
