[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gansu"
version = "2026.7.3"
description = "GPU Accelerated Numerical Simulation Utility for quantum chemistry"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    {name = "Hiroshima University / Fujitsu Limited"},
]
keywords = ["quantum-chemistry", "gpu", "hartree-fock", "ccsd", "cuda"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cublas-cu12",
    "nvidia-cusolver-cu12",
    "nvidia-cusparse-cu12",
    "nvidia-nccl-cu12",
]

[project.scripts]
gansu = "gansu.cli:main"

[project.urls]
Homepage = "https://github.com/Yasuaki-Ito/GANSU"

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
gansu = [
    "data/basis/*.gbs",
    "data/basis/*.sad",
    "data/auxiliary_basis/*.gbs",
    "lib/libgansu.so",
    "lib/libgansu.dylib",
    "lib/*.so*",
    "_native_meta.json",
]
